--- a/src/pages/landing/landing.html
+++ b/src/pages/landing/landing.html
@@ -1,10 +1,10 @@
 <ion-content padding>
-  <div class="tCenter mt50">
-      <img src="../../assets/images/logo.svg" class="appLogo" alt="">
+  <div text-center margin-top>
+      <h1><img src="./assets/images/logo.svg" class="appLogo" alt="FireChat" no-margin></h1>
   </div>
   <ion-grid>
-      <ion-row class="tCenter fsize24">
-        <ion-col col-12 class="mb200">Welcome To FireChat</ion-col>
+      <ion-row>
+        <ion-col col-12><p class="welcomeMsg" text-center no-margin>Welcome To FireChat</p></ion-col>
         <button ion-button icon-left medium full margin-top class="fbBtn mt200" (click)="fbLoginBtn()">
           <ion-icon name="logo-facebook"></ion-icon>
           LOGIN WITH FACEBOOK
