--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,41 @@
-<!--
-  Generated template for the HomePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
+  <ion-navbar color="light-blue" hideBackButton *ngIf="!showSearchBar">
+    <ion-buttons left *ngIf="!showSearchBar">
+      <button ion-button icon-only menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
 
-  <ion-navbar>
-    <ion-title>home</ion-title>
+    <ion-title *ngIf="!showSearchBar">FireChat</ion-title>
+    
+    <ion-buttons right>
+      <button ion-button icon-only (click)="search()">
+        <ion-icon name="search"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
-
+  <ion-navbar color="light-blue" hideBackButton *ngIf="showSearchBar">
+    <ion-searchbar></ion-searchbar>
+    <ion-buttons right>
+      <button ion-button icon-only (click)="search()">
+        <ion-icon name="close"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-navbar>
 </ion-header>
 
+<ion-menu type="overlay" [content]="mycontent">
+  <ion-content>
+    <ion-list>
+      <ion-item menuClose detail-none>Close Menu</ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
 
-<ion-content padding>
-  <h1>Welcome {{userEmail}}</h1>
-</ion-content>
+<ion-nav #mycontent [root]="rootPage"></ion-nav>
+
+
+
+
+
+
