apply page lazyload

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -38,8 +38,8 @@
 			</div>
 
 			<div text-right margin-top>
-				<a href="#" (click)="pushSignUp()" padding-top padding-right>Sign up?</a>
-				<a href="#" (click)="pushResetPass()" padding-top>Forgot Password?</a>
+				<span (click)="pushSignUp()" padding-top padding-right>Sign up?</span>
+				<span (click)="pushResetPass()" padding-top>Forgot Password?</span>
 			</div>
 	  	<button ion-button color="light-blue" medium float-right full margin-top [disabled]="isLoginDisable">LOGIN</button>
 	  </form>
