--- a/src/pages/landing/landing.html
+++ b/src/pages/landing/landing.html
@@ -4,7 +4,45 @@
   </div>
   <ion-grid>
       <ion-row>
-        <ion-col col-12><p class="welcomeMsg" text-center no-margin>Welcome To FireChat</p></ion-col>
+        <form (submit)="login()" [formGroup]="loginForm" col-12 no-padding>
+          <ion-item no-padding>
+            <ion-label floating>Email</ion-label>
+          <ion-input 
+          type="text" 
+          [(ngModel)]="email"
+          name="email"
+          [formControl]="loginForm.controls['email']"
+          ></ion-input>
+        </ion-item>
+          <div 
+            *ngIf="loginForm.controls['email'].hasError('pattern') && 
+            loginForm.controls['email'].touched"
+            class="errorColor fSize12 mt5" 
+            >Email Address is invalid
+          </div>
+          <ion-item no-padding>
+              <ion-label floating>Password</ion-label>
+          <ion-input 
+          type="password"
+          [(ngModel)]="pass"
+          name="pass"
+          [formControl]="loginForm.controls['pass']"
+          ></ion-input>
+        </ion-item>
+          <div 
+            *ngIf="loginForm.controls['pass'].hasError('required') && 
+            loginForm.controls['pass'].touched" 
+            class="errorColor fSize12 mt5" 
+            >Password is required
+          </div>
+    
+          <div text-right margin-top>
+            <span (click)="navPush('RegisterPage')" padding-top padding-right>Sign up?</span>
+            <span (click)="navPush('ResetPasswordPage')" padding-top>Forgot Password?</span>
+          </div>
+          <button ion-button color="light-blue" medium float-right full margin-top [disabled]="isLoginDisable">LOGIN</button>
+        </form>
+
         <button ion-button icon-left medium full margin-top class="fbBtn mt200" (click)="fbLoginBtn()">
           <ion-icon name="logo-facebook"></ion-icon>
           LOGIN WITH FACEBOOK
@@ -13,11 +51,6 @@
         <button ion-button icon-left medium full margin-top class="googleBtn" (click)="googleLoginBtn()">
           <ion-icon name="logo-googleplus"></ion-icon>
           LOGIN WITH GOOGLE
-        </button>
-        
-        <button ion-button icon-left medium full margin-top class="emailBtn" (click)="pushLoginPage()">
-          <ion-icon name="mail"></ion-icon>
-          LOGIN WITH EMAIL
         </button>
       </ion-row>
     </ion-grid>
