--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -19,7 +19,7 @@
 				*ngIf="loginForm.controls['email'].hasError('pattern') && 
 				loginForm.controls['email'].touched"
 				class="errorColor fSize12 mt5" 
-				padding-left>Email Address is invalid
+				>Email Address is invalid
 			</div>
 	  	<ion-item no-padding>
 	  	  	<ion-label floating>Password</ion-label>
@@ -34,7 +34,7 @@
 				*ngIf="loginForm.controls['pass'].hasError('required') && 
 				loginForm.controls['pass'].touched" 
 				class="errorColor fSize12 mt5" 
-				padding-left>Password is required
+				>Password is required
 			</div>
 
 			<div text-right margin-top>
