--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,12 +1,6 @@
 <ion-tabs>
-  <ion-tab tabIcon="chatboxes" tabTitle="Chat" [root]="tab1"></ion-tab>
+  <ion-tab tabIcon="home" tabTitle="Home" [root]="tab1"></ion-tab>
   <ion-tab tabIcon="contacts" tabTitle="Contacts" [root]="tab2"></ion-tab>
   <ion-tab tabIcon="person" tabTitle="Profile" [root]="tab3"></ion-tab>
   <ion-tab tabIcon="settings" tabTitle="Settings" [root]="tab4"></ion-tab>
 </ion-tabs>
-
-
-
-
-
-
