push notification implementation

--- a/src/pages/landing/landing.html
+++ b/src/pages/landing/landing.html
@@ -1,6 +1,7 @@
 <ion-content padding>
   <div text-center margin-top>
       <h1><img src="./assets/images/logo.svg" class="appLogo" alt="FireChat" no-margin></h1>
+      <p class="title" no-padding>FireChat</p>
   </div>
   <ion-grid>
       <ion-row>
