--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -7,8 +7,8 @@
       </ion-buttons>
       <ion-title text-center>Chats</ion-title>
       <ion-buttons right>
-          <button ion-button icon-only>
-            <ion-icon name="search"></ion-icon>
+          <button ion-button icon-only (click)="pushPage(UserslistPage)">
+            <ion-icon name="person-add"></ion-icon>
           </button>
         </ion-buttons>
     </ion-navbar>
@@ -16,10 +16,11 @@
 
   
   <ion-content no-padding>
-    <ion-list>
+    <!-- <ion-list>
       <ion-item-divider color="light">FireChat Users <button (click)="logoutBtn()">Logout</button></ion-item-divider>
         <ion-item *ngFor="let user of users" (click)="chatBox(user)">
           <ion-avatar item-start>
+            <span class="unreadCount" *ngIf="user.unread">{{user.unread}}</span>
             <img src="{{user.photo}}" *ngIf="user.photo;else photo;">
             <ng-template #photo><span class="icon-circle">{{user.displayName.charAt(0)}}</span></ng-template>
           </ion-avatar>
@@ -29,9 +30,5 @@
           </ion-label>
           <ion-note item-end="" class="note note-ios">3:43 pm</ion-note>
         </ion-item>
-    </ion-list>
+    </ion-list> -->
   </ion-content>
-  
-
-
-  
