--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs color="light-blue">
   <ion-tab tabIcon="chatbubbles" tabTitle="Chat" [root]="tab1"></ion-tab>
-  <ion-tab tabIcon="notifications" tabTitle="Notifications" [root]="tab2"></ion-tab>
-  <ion-tab tabIcon="person" tabTitle="Profile" [root]="tab3"></ion-tab>
+  <ion-tab tabIcon="notifications" tabTitle="Notifications" [root]="tab2" tabBadge="3" tabBadgeStyle="danger"></ion-tab>
+  <ion-tab tabIcon="person-add" tabTitle="Users" [root]="tab3"></ion-tab>
   <ion-tab tabIcon="settings" tabTitle="Settings" [root]="tab4"></ion-tab>
 </ion-tabs>
 
