--- a/src/pages/chats/chats.html
+++ b/src/pages/chats/chats.html
@@ -8,7 +8,7 @@
         </ion-avatar>
         <ion-label>
           <h3 [class.fwB]="user.unreadCount != 0">{{user.displayName}}</h3>
-          <p *ngIf="user.lastMessage == ''">No previous chat . . .</p>
+          <p *ngIf="user.lastMsg == null">No previous chat . . .</p>
           <p [class.txtBlack]="user.unreadCount != 0" *ngIf="user.lastMessage != ''">{{user.lastMsg}}</p>
           
         </ion-label>
